--- a/DesarrolloWeb_Daniel_Davalos/client/index.html
+++ b/DesarrolloWeb_Daniel_Davalos/client/index.html
@@ -13,6 +13,7 @@
       <div class="login-container">
         <div class="callout primary login">
           <h4>Inicia sesión</h4>
+          <form>
             <div class="row align-center">
               <div class="small-7 columns">
                 <label>Usuario
@@ -25,9 +26,10 @@
                 </label>
               </div>
               <div class="small-7 columns btn-container">
-                <button type="" id="enviar_inicio" class="button">Enviar</button>
+                <button type="submit" class="button">Enviar</button>
               </div>
             </div>
+          </form>
         </div>
       </div>
     </div>
@@ -35,6 +37,6 @@
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.min.js"></script>
     <script src="js/vendor/evento_crear.js"></script>
-    <script src="js/vendor/evento_inicio.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
